# iota

./: .gitignore  .typos.toml  Cargo.toml  dprint.json  pnpm-lock.yaml
.changeset/: angry-items-fix.md  blue-penguins-buy.md  fair-tomatoes-remain.md  funny-moose-run.md  large-eagles-boil.md  neat-gorillas-flow.md  witty-lies-watch.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cargo_llvm_cov.yml  check_sri.yml  hierarchy.yml  nightly.yml  release.yml  turbo_nightly.yml  upload-docs-to-aws.yml
apps/ui-icons/: CHANGELOG.md  package.json
apps/ui-kit/: CHANGELOG.md  package.json
apps/wallet-dashboard/: package.json
consensus/core/: Cargo.toml
consensus/core/src/: authority_node.rs  commit_syncer.rs  error.rs  metrics.rs  subscriber.rs  synchronizer.rs
consensus/core/src/network/: tonic_network.rs  tonic_tls.rs
crates/iota/: Cargo.toml
crates/iota-benchmark/: Cargo.toml
crates/iota-benchmark/src/: lib.rs  options.rs
crates/iota-benchmark/src/workloads/: delegation.rs
crates/iota-config/: Cargo.toml
crates/iota-config/data/: fullnode-template-with-path.yaml
crates/iota-config/src/: lib.rs  node.rs  verifier_signing_config.rs
crates/iota-core/: Cargo.toml
crates/iota-core/src/: authority.rs  storage.rs
crates/iota-core/src/unit_tests/: authority_aggregator_tests.rs  move_package_upgrade_tests.rs
crates/iota-data-ingestion/: Cargo.toml
crates/iota-data-ingestion-core/: Cargo.toml
crates/iota-data-ingestion-core/src/: errors.rs  executor.rs  lib.rs  reducer.rs  tests.rs  util.rs  worker_pool.rs
crates/iota-data-ingestion-core/src/history/: manifest.rs  mod.rs  reader.rs
crates/iota-data-ingestion/src/: common.rs  lib.rs  main.rs
crates/iota-data-ingestion/src/workers/: archival.rs  blob.rs  historical.rs  kv_store.rs  mod.rs
crates/iota-faucet/: Cargo.toml
crates/iota-faucet/src/: metrics.rs  metrics_layer.rs
crates/iota-faucet/src/faucet/: mod.rs
crates/iota-framework/: CONTRIBUTING.md  published_api.txt
crates/iota-framework-snapshot/: manifest.json
crates/iota-framework-tests/: Cargo.toml
crates/iota-framework-tests/src/: metered_verifier.rs
crates/iota-framework-tests/tests/: move_tests.rs
crates/iota-graphql-rpc/: schema.graphql
crates/iota-json-rpc-types/: Cargo.toml
crates/iota-json-rpc-types/src/: iota_event.rs  iota_extended.rs  iota_transaction.rs  lib.rs
crates/iota-metrics/: Cargo.toml  README.md
crates/iota-metrics/src/: hardware_metrics.rs  lib.rs
crates/iota-move/: Cargo.toml
crates/iota-move/src/: build.rs  lib.rs  main.rs  new.rs
crates/iota-network-stack/: Cargo.toml
crates/iota-network-stack/src/: grpc_timeout.rs  lib.rs  multiaddr.rs
crates/iota-proxy/: README.md
crates/iota-sdk/: README.md
crates/iota-source-validation-service/: Cargo.toml
crates/iota-source-validation-service/tests/: tests.rs
crates/iota-tls/: Cargo.toml
crates/iota-tls/src/: lib.rs  verifier.rs
crates/iota-tool/: Cargo.toml
crates/iota-tool/src/: commands.rs  lib.rs  main.rs
crates/iota-tool/src/db_tool/: mod.rs
crates/iota-types/: Cargo.toml
crates/iota-types/src/: dynamic_field.rs  event.rs
crates/iota-types/src/gas_model/: gas_predicates.rs  tables.rs
crates/iota-types/src/iota_system_state/: epoch_start_iota_system_state.rs  iota_system_state_inner_v1.rs  iota_system_state_inner_v2.rs  iota_system_state_summary.rs  mod.rs
crates/iota-types/src/storage/: read_store.rs
crates/iota/src/: client_commands.rs  console.rs  fire_drill.rs  iota_commands.rs  keytool.rs  lib.rs  main.rs  validator_commands.rs  zklogin_commands_util.rs
crates/iota/src/unit_tests/: validator_tests.rs
crates/iota/tests/: cli_tests.rs  shell_tests.rs
crates/iota/tests/shell_tests/with_network/move_build_bytecode_with_address_resolution/: move_build_bytecode_with_address_resolution.sh
crates/iota/tests/shell_tests/with_network/source_verification_deprecation/: both_flags.sh  no_flags.sh  skip_dep_verif.sh  with_dep_verif.sh
crates/iota/tests/shell_tests/with_network/source_verification_deprecation/dependency/: Move.toml
crates/iota/tests/shell_tests/with_network/source_verification_deprecation/dependency/sources/: dependency.move
crates/iota/tests/shell_tests/with_network/source_verification_deprecation/example/: Move.toml
crates/iota/tests/shell_tests/with_network/source_verification_deprecation/example/sources/: example.move
crates/iota/tests/snapshots/: shell_tests__with_network__move_build_bytecode_with_address_resolution__move_build_bytecode_with_address_resolution.sh.snap  shell_tests__with_network__source_verification_deprecation__both_flags.sh.snap  shell_tests__with_network__source_verification_deprecation__no_flags.sh.snap  shell_tests__with_network__source_verification_deprecation__skip_dep_verif.sh.snap  shell_tests__with_network__source_verification_deprecation__with_dep_verif.sh.snap
crates/telemetry-subscribers/: Cargo.toml  README.md  observability.md  observability_guides.md
crates/telemetry-subscribers/src/: file_exporter.rs  lib.rs
dev-tools/: README.md
dev-tools/iota-data-ingestion/: README.md  docker-compose.yaml
dev-tools/iota-private-network/: README.md  bootstrap.sh  docker-compose.yaml
docs/site/: docusaurus.config.js  package.json
iota-execution/src/: lib.rs  lib.template.rs
scripts/ci_tests/: README.md  rust_tests.sh
scripts/homebrew/: pr_template.md  template.rb  update_formula.sh
scripts/indexer-schema/: generate.sh  generate_for_all_tables_macro.py
scripts/release_notes/: release_notes.py  run.sh
sdk/create-dapp/: CHANGELOG.md  package.json
sdk/dapp-kit/: CHANGELOG.md  package.json
sdk/graphql-transport/: CHANGELOG.md  package.json
sdk/kiosk/: CHANGELOG.md  package.json
sdk/ledgerjs-hw-app-iota/: CHANGELOG.md  package.json
sdk/typescript/: CHANGELOG.md  package.json
sdk/wallet-standard/: CHANGELOG.md  package.json
setups/: README.md  download_and_verify_private_binary.sh  download_private.sh
setups/fullnode/: fullnode-template-devnet.yaml  fullnode-template-testnet.yaml  fullnode-template.yaml
(+342 files in other folders)
