[workspace]
resolver = "2"
exclude = [
  "docs/examples/rust",
  "examples/custom-indexer/rust",
  "examples/tic-tac-toe/cli",
  "external-crates/move/crates/bytecode-interpreter-crypto",
  "external-crates/move/crates/bytecode-verifier-libfuzzer",
  "external-crates/move/crates/bytecode-verifier-prop-tests",
  "external-crates/move/crates/bytecode-verifier-tests",
  "external-crates/move/crates/bytecode-verifier-transactional-tests",
  "external-crates/move/crates/enum-compat-util",
  "external-crates/move/crates/invalid-mutations",
  "external-crates/move/crates/language-benchmarks",
  "external-crates/move/crates/module-generation",
  "external-crates/move/crates/move-abstract-interpreter",
  "external-crates/move/crates/move-abstract-stack",
  "external-crates/move/crates/move-analyzer",
  "external-crates/move/crates/move-binary-format",
  "external-crates/move/crates/move-borrow-graph",
  "external-crates/move/crates/move-bytecode-source-map",
  "external-crates/move/crates/move-bytecode-utils",
  "external-crates/move/crates/move-bytecode-verifier",
  "external-crates/move/crates/move-bytecode-verifier-meter",
  "external-crates/move/crates/move-bytecode-viewer",
  "external-crates/move/crates/move-cli",
  "external-crates/move/crates/move-command-line-common",
  "external-crates/move/crates/move-compiler",
  "external-crates/move/crates/move-compiler-transactional-tests",
  "external-crates/move/crates/move-core-types",
  "external-crates/move/crates/move-coverage",
  "external-crates/move/crates/move-disassembler",
  "external-crates/move/crates/move-docgen",
  "external-crates/move/crates/move-ir-compiler",
  "external-crates/move/crates/move-ir-compiler-transactional-tests",
  "external-crates/move/crates/move-ir-to-bytecode",
  "external-crates/move/crates/move-ir-to-bytecode-syntax",
  "external-crates/move/crates/move-ir-types",
  "external-crates/move/crates/move-model",
  "external-crates/move/crates/move-package",
  "external-crates/move/crates/move-proc-macros",
  "external-crates/move/crates/move-prover",
  "external-crates/move/crates/move-prover-test-utils",
  "external-crates/move/crates/move-stackless-bytecode",
  "external-crates/move/crates/move-stdlib",
  "external-crates/move/crates/move-stdlib-natives",
  "external-crates/move/crates/move-symbol-pool",
  "external-crates/move/crates/move-transactional-test-runner",
  "external-crates/move/crates/move-unit-test",
  "external-crates/move/crates/move-vm-config",
  "external-crates/move/crates/move-vm-integration-tests",
  "external-crates/move/crates/move-vm-profiler",
  "external-crates/move/crates/move-vm-runtime",
  "external-crates/move/crates/move-vm-test-utils",
  "external-crates/move/crates/move-vm-transactional-tests",
  "external-crates/move/crates/move-vm-types",
  "external-crates/move/crates/serializer-tests",
  "external-crates/move/crates/test-generation",
  "sdk/move-bytecode-template",
]
members = [
  "consensus/config",
  "consensus/core",
  "crates/bin-version",
  "crates/iota",
  "crates/iota-adapter-transactional-tests",
  "crates/iota-analytics-indexer",
  "crates/iota-analytics-indexer-derive",
  "crates/iota-archival",
  "crates/iota-authority-aggregation",
  "crates/iota-aws-orchestrator",
  "crates/iota-benchmark",
  "crates/iota-bridge",
  "crates/iota-bridge-cli",
  "crates/iota-bridge-indexer",
  "crates/iota-cluster-test",
  "crates/iota-common",
  "crates/iota-config",
  "crates/iota-core",
  "crates/iota-cost",
  "crates/iota-data-ingestion",
  "crates/iota-data-ingestion-core",
  "crates/iota-e2e-tests",
  "crates/iota-enum-compat-util",
  "crates/iota-faucet",
  "crates/iota-framework",
  "crates/iota-framework-snapshot",
  "crates/iota-framework-tests",
  "crates/iota-genesis-builder",
  "crates/iota-genesis-common",
  "crates/iota-graphql-config",
  "crates/iota-graphql-e2e-tests",
  "crates/iota-graphql-rpc",
  "crates/iota-graphql-rpc-client",
  "crates/iota-graphql-rpc-headers",
  "crates/iota-http",
  "crates/iota-indexer",
  "crates/iota-indexer-builder",
  "crates/iota-json",
  "crates/iota-json-rpc",
  "crates/iota-json-rpc-api",
  "crates/iota-json-rpc-tests",
  "crates/iota-json-rpc-types",
  "crates/iota-keys",
  "crates/iota-light-client",
  "crates/iota-macros",
  "crates/iota-metric-checker",
  "crates/iota-metrics",
  "crates/iota-move",
  "crates/iota-move-build",
  "crates/iota-move-lsp",
  "crates/iota-network",
  "crates/iota-network-stack",
  "crates/iota-node",
  "crates/iota-open-rpc",
  "crates/iota-open-rpc-macros",
  "crates/iota-package-dump",
  "crates/iota-package-management",
  "crates/iota-package-resolver",
  "crates/iota-proc-macros",
  "crates/iota-protocol-config",
  "crates/iota-protocol-config-macros",
  "crates/iota-proxy",
  "crates/iota-replay",
  "crates/iota-rest-api",
  "crates/iota-rest-kv",
  "crates/iota-rosetta",
  "crates/iota-rpc-loadgen",
  "crates/iota-sdk",
  "crates/iota-simulator",
  "crates/iota-single-node-benchmark",
  "crates/iota-snapshot",
  "crates/iota-source-validation",
  "crates/iota-source-validation-service",
  "crates/iota-storage",
  "crates/iota-surfer",
  "crates/iota-swarm",
  "crates/iota-swarm-config",
  "crates/iota-test-transaction-builder",
  "crates/iota-tls",
  "crates/iota-tool",
  "crates/iota-transaction-builder",
  "crates/iota-transaction-checks",
  "crates/iota-transactional-test-runner",
  "crates/iota-types",
  "crates/iota-upgrade-compatibility-transactional-tests",
  "crates/iota-util-mem",
  "crates/iota-util-mem-derive",
  "crates/iota-verifier-transactional-tests",
  "crates/prometheus-closure-metric",
  "crates/shared-crypto",
  "crates/simulacrum",
  "crates/telemetry-subscribers",
  "crates/test-cluster",
  "crates/transaction-fuzzer",
  "crates/typed-store",
  "crates/typed-store-derive",
  "crates/typed-store-error",
  "crates/typed-store-workspace-hack",
  "iota-execution",
  "iota-execution/cut",
  "iota-execution/latest/iota-adapter",
  "iota-execution/latest/iota-move-natives",
  "iota-execution/latest/iota-verifier",
]

[workspace.package]
# This version string will be inherited by iota-core, iota-faucet, iota-node, iota-tools, iota-sdk, iota-move-build, and iota crates.
version = "0.11.0-alpha"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Exit process with SIGABRT when any thread panics
panic = 'abort'
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, iota binary size would be > 1GB.
strip = 'debuginfo'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
debug = true
debug-assertions = true
inherits = "test"
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1
overflow-checks = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(msim)', 'cfg(fail_points)'] }

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
# external dependencies
# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "c4e7e4cb4b624d7738c2016d7b7885c6774ff9c2" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "c4e7e4cb4b624d7738c2016d7b7885c6774ff9c2" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "c4e7e4cb4b624d7738c2016d7b7885c6774ff9c2" }
anyhow = "1.0.71"
arc-swap = { version = "1.5.1", features = ["serde"] }
async-graphql = "=7.0.11"
async-recursion = "1.0.4"
async-trait = "0.1.61"
aws-config = "1.5.6"
aws-sdk-dynamodb = "1.42"
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "http2", "json", "matched-path", "original-uri", "form", "query", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-server = { git = "https://github.com/bmwill/axum-server.git", rev = "f44323e271afdd1365fd0c8b0a4c0bbdf4956cb7", version = "0.6", default-features = false, features = ["tls-rustls"] }
backoff = { version = "0.4.0", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
base64 = "0.21.2"
base64-url = "2"
bcs = "0.1.4"
better_any = "0.1.1"
bincode = "1.3.3"
bip32 = "0.5"
byteorder = "1.4.3"
bytes = { version = "1.5.0", features = ["serde"] }
cached = "0.43.0"
camino = "1.1.1"
cfg-if = "1.0.0"
# Locked to this version until a release of `arrow` that includes https://github.com/apache/arrow-rs/pull/7198
chrono = { version = "=0.4.39", features = ["clock", "serde"] }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
colored = "2.0.0"
comfy-table = "6.1.3"
const-str = "0.5.3"
coset = "0.3"
criterion = { version = "0.5.0", features = ["async", "async_tokio", "html_reports"] }
crossterm = "0.25.0"
csv = "1.2.1"
dashmap = "5.5.3"
datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", rev = "72db7f6d1bbe36a5407e96b9488a581f763e106f" }
derive_more = "1.0"
diesel = { version = "2.1.0", features = ["chrono", "r2d2", "serde_json", "64-column-tables", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
dirs = "5.0"
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
either = "1.8.0"
enum_dispatch = "^0.3"
expect-test = "1.4.0"
eyre = "0.6.8"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "2f502fd8570fe4e9cff36eea5bbd6fef22002898" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "2f502fd8570fe4e9cff36eea5bbd6fef22002898" }
fastcrypto-vdf = { git = "https://github.com/MystenLabs/fastcrypto", rev = "2f502fd8570fe4e9cff36eea5bbd6fef22002898", features = ["experimental"] }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "2f502fd8570fe4e9cff36eea5bbd6fef22002898", package = "fastcrypto-zkp" }
fdlimit = "0.2.1"
flate2 = "1.0.28"
fs_extra = "1.3.0"
futures = "0.3.28"
git-version = "0.3.5"
governor = "0.6.0"
hdrhistogram = "7.5.1"
hex = "0.4.3"
http = "1"
http-body = "1"
humantime = "2.1.0"
hyper = "1"
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-roots", "http2", "ring", "tls12"] }
im = "15"
indexmap = { version = "2.1.0", features = ["serde"] }
indicatif = "0.17.2"
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
integer-encoding = "3.0.1"
itertools = "0.13.0"
json_to_table = { git = "https://github.com/zhiburt/tabled/", rev = "e449317a1c02eb6b29e409ad6617e5d9eb7b3bd4" }
jsonrpsee = { version = "0.24", features = ["server", "macros", "client", "ws-client", "http-client"] }
leb128 = "0.2.5"
lru = "0.12"
mockall = "0.11.4"
more-asserts = "0.3.1"
msim = { git = "https://github.com/iotaledger/iota-sim.git", branch = "tokio-1.43", package = "msim" }
nonempty = "0.9.0"
notify = "6.1.1"
num-bigint = "0.4.4"
num_cpus = "1.15.0"
num_enum = "0.7"
object_store = { version = "0.10", features = ["aws", "gcp", "azure", "http"] }
once_cell = "1.18.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
parking_lot = "0.12.1"
passkey-authenticator = "0.4.0"
passkey-client = "0.4.0"
passkey-types = "0.4.0"
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.47"
prometheus = "0.13.3"
proptest = "1.1.0"
proptest-derive = "0.5.1"
prost = "0.13"
protobuf = { version = "2.28", features = ["with-bytes"] }
quinn-proto = "0.11.6"
quote = "1.0.23"
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.7.1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
roaring = "0.10.6"
rocksdb = { version = "0.21.0", default-features = false, features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"] }
rstest = "0.16.0"
rustls = { version = "0.23.18", default-features = false, features = ["std", "tls12", "ring"] }
schemars = { version = "0.8.21", features = ["either"] }
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-reflection = "0.4"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
serde_with = "3.8"
serde_yaml = "0.8.26"
shellexpand = "3.1.0"
# datatest-stable = "0.1.2"
signature = "1.6.0"
similar = "2.4.0"
smallvec = "1.10.0"
snap = "1.1.0"
static_assertions = "1.1.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }
sysinfo = "^0.33"
tabled = { version = "0.12" }
tap = "1.0.1"
tempfile = "3.3.0"
test-fuzz = "3.0.4"
thiserror = "1.0.40"
# tokio is defined at a specific version to support patching with iota-sim
# Do not upgrade without updating https://github.com/iotaledger/iota-sim first
tokio = "=1.43.0"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-util = "0.7.10"
toml = { version = "0.7.4", features = ["preserve_order"] }
tonic = { version = "0.12", features = ["transport"] }
tonic-build = { version = "0.12", features = ["prost", "transport"] }
tonic-health = "0.12"
tower = { version = "0.4.12", features = ["full", "util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["cors", "full", "trace", "set-header", "propagate-header"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["std", "smallvec", "fmt", "ansi", "time", "json", "registry", "env-filter"] }
unescape = "0.1.0"
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

# internal dependencies
### Workspace Members ###
bin-version = { path = "crates/bin-version" }
consensus-config = { path = "consensus/config" }
consensus-core = { path = "consensus/core" }
iota = { path = "crates/iota" }
iota-adapter-transactional-tests = { path = "crates/iota-adapter-transactional-tests" }
iota-analytics-indexer = { path = "crates/iota-analytics-indexer" }
iota-analytics-indexer-derive = { path = "crates/iota-analytics-indexer-derive" }
iota-archival = { path = "crates/iota-archival" }
iota-authority-aggregation = { path = "crates/iota-authority-aggregation" }
iota-benchmark = { path = "crates/iota-benchmark" }
iota-bridge = { path = "crates/iota-bridge" }
iota-cluster-test = { path = "crates/iota-cluster-test" }
iota-common = { path = "crates/iota-common" }
iota-config = { path = "crates/iota-config" }
iota-core = { path = "crates/iota-core" }
iota-cost = { path = "crates/iota-cost" }
iota-data-ingestion = { path = "crates/iota-data-ingestion" }
iota-data-ingestion-core = { path = "crates/iota-data-ingestion-core" }
iota-e2e-tests = { path = "crates/iota-e2e-tests" }
iota-enum-compat-util = { path = "crates/iota-enum-compat-util" }
iota-execution = { path = "iota-execution" }
iota-faucet = { path = "crates/iota-faucet" }
iota-framework = { path = "crates/iota-framework" }
iota-framework-snapshot = { path = "crates/iota-framework-snapshot" }
iota-framework-tests = { path = "crates/iota-framework-tests" }
iota-genesis-builder = { path = "crates/iota-genesis-builder" }
iota-genesis-common = { path = "crates/iota-genesis-common" }
iota-graphql-config = { path = "crates/iota-graphql-config" }
iota-graphql-rpc = { path = "crates/iota-graphql-rpc" }
iota-graphql-rpc-client = { path = "crates/iota-graphql-rpc-client" }
iota-graphql-rpc-headers = { path = "crates/iota-graphql-rpc-headers" }
iota-http = { path = "crates/iota-http" }
iota-indexer = { path = "crates/iota-indexer" }
iota-indexer-builder = { path = "crates/iota-indexer-builder" }
iota-json = { path = "crates/iota-json" }
iota-json-rpc = { path = "crates/iota-json-rpc" }
iota-json-rpc-api = { path = "crates/iota-json-rpc-api" }
iota-json-rpc-types = { path = "crates/iota-json-rpc-types" }
iota-keys = { path = "crates/iota-keys" }
iota-macros = { path = "crates/iota-macros" }
iota-metric-checker = { path = "crates/iota-metric-checker" }
iota-metrics = { path = "crates/iota-metrics" }
iota-move = { path = "crates/iota-move" }
iota-move-build = { path = "crates/iota-move-build" }
iota-move-lsp = { path = "crates/iota-move-lsp" }
iota-network = { path = "crates/iota-network" }
iota-network-stack = { path = "crates/iota-network-stack" }
iota-node = { path = "crates/iota-node" }
iota-open-rpc = { path = "crates/iota-open-rpc" }
iota-open-rpc-macros = { path = "crates/iota-open-rpc-macros" }
iota-package-dump = { path = "crates/iota-package-dump" }
iota-package-management = { path = "crates/iota-package-management" }
iota-package-resolver = { path = "crates/iota-package-resolver" }
iota-proc-macros = { path = "crates/iota-proc-macros" }
iota-protocol-config = { path = "crates/iota-protocol-config" }
iota-protocol-config-macros = { path = "crates/iota-protocol-config-macros" }
iota-replay = { path = "crates/iota-replay" }
iota-rest-api = { path = "crates/iota-rest-api" }
iota-rest-kv = { path = "crates/iota-rest-kv" }
iota-rosetta = { path = "crates/iota-rosetta" }
iota-rpc-loadgen = { path = "crates/iota-rpc-loadgen" }
iota-sdk = { path = "crates/iota-sdk" }
# core-types with json format for REST API
iota-sdk2 = { package = "iota-rust-sdk", git = "https://github.com/iotaledger/iota-rust-sdk.git", rev = "3e4a47351cdd774dd2895a2552a038fe2f4b6da5", features = ["hash", "serde", "schemars"] }
iota-simulator = { path = "crates/iota-simulator" }
iota-snapshot = { path = "crates/iota-snapshot" }
iota-source-validation = { path = "crates/iota-source-validation" }
iota-source-validation-service = { path = "crates/iota-source-validation-service" }
iota-storage = { path = "crates/iota-storage" }
iota-surfer = { path = "crates/iota-surfer" }
iota-swarm = { path = "crates/iota-swarm" }
iota-swarm-config = { path = "crates/iota-swarm-config" }
iota-test-transaction-builder = { path = "crates/iota-test-transaction-builder" }
iota-tls = { path = "crates/iota-tls" }
iota-tool = { path = "crates/iota-tool" }
iota-transaction-builder = { path = "crates/iota-transaction-builder" }
iota-transaction-checks = { path = "crates/iota-transaction-checks" }
iota-transactional-test-runner = { path = "crates/iota-transactional-test-runner" }
iota-types = { path = "crates/iota-types" }
iota-upgrade-compatibility-transactional-tests = { path = "crates/iota-upgrade-compatibility-transactional-tests" }
iota-util-mem = { path = "crates/iota-util-mem" }
iota-util-mem-derive = { path = "crates/iota-util-mem-derive" }
iota-verifier-transactional-tests = { path = "crates/iota-verifier-transactional-tests" }
move-abstract-interpreter = { path = "external-crates/move/crates/move-abstract-interpreter" }
move-abstract-stack = { path = "external-crates/move/crates/move-abstract-stack" }
move-analyzer = { path = "external-crates/move/crates/move-analyzer" }
move-binary-format = { path = "external-crates/move/crates/move-binary-format" }
move-bytecode-source-map = { path = "external-crates/move/crates/move-bytecode-source-map" }
move-bytecode-utils = { path = "external-crates/move/crates/move-bytecode-utils" }
move-bytecode-verifier-meter = { path = "external-crates/move/crates/move-bytecode-verifier-meter" }
move-cli = { path = "external-crates/move/crates/move-cli" }
move-command-line-common = { path = "external-crates/move/crates/move-command-line-common" }
move-compiler = { path = "external-crates/move/crates/move-compiler" }
move-core-types = { path = "external-crates/move/crates/move-core-types" }
move-disassembler = { path = "external-crates/move/crates/move-disassembler" }
move-ir-types = { path = "external-crates/move/crates/move-ir-types" }
move-package = { path = "external-crates/move/crates/move-package" }
move-prover = { path = "external-crates/move/crates/move-prover" }
move-stackless-bytecode = { path = "external-crates/move/crates/move-stackless-bytecode" }
move-symbol-pool = { path = "external-crates/move/crates/move-symbol-pool" }
move-transactional-test-runner = { path = "external-crates/move/crates/move-transactional-test-runner" }
move-unit-test = { path = "external-crates/move/crates/move-unit-test" }
move-vm-config = { path = "external-crates/move/crates/move-vm-config" }
move-vm-profiler = { path = "external-crates/move/crates/move-vm-profiler" }
move-vm-test-utils = { path = "external-crates/move/crates/move-vm-test-utils/", features = ["tiered-gas"] }
move-vm-types = { path = "external-crates/move/crates/move-vm-types" }
prometheus-closure-metric = { path = "crates/prometheus-closure-metric" }
shared-crypto = { path = "crates/shared-crypto" }
simulacrum = { path = "crates/simulacrum" }
telemetry-subscribers = { path = "crates/telemetry-subscribers" }
test-cluster = { path = "crates/test-cluster" }
transaction-fuzzer = { path = "crates/transaction-fuzzer" }
typed-store = { path = "crates/typed-store" }
typed-store-derive = { path = "crates/typed-store-derive" }
typed-store-error = { path = "crates/typed-store-error" }
