[package]
name = "iota-config"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anemo.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
bcs.workspace = true
clap.workspace = true
csv.workspace = true
dirs.workspace = true
fastcrypto.workspace = true
object_store.workspace = true
once_cell.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_yaml.workspace = true
tracing.workspace = true

# internal dependencies
consensus-config.workspace = true
iota-genesis-common.workspace = true
iota-keys.workspace = true
iota-protocol-config.workspace = true
iota-types.workspace = true
move-vm-config.workspace = true
