[package]
name = "iota-core"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anemo.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
count-min-sketch = "0.1.7"
dashmap.workspace = true
diffy = { version = "0.3", default-features = false }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
fastcrypto-zkp.workspace = true
futures.workspace = true
im.workspace = true
indexmap.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
lru.workspace = true
mockall.workspace = true
nonempty.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
quinn-proto.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
roaring.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
static_assertions.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-stream.workspace = true
tracing.workspace = true
twox-hash = "1.6"
zeroize = "1.6"

# internal dependencies
consensus-config.workspace = true
consensus-core.workspace = true
iota-archival.workspace = true
iota-authority-aggregation.workspace = true
iota-common.workspace = true
iota-config.workspace = true
iota-execution.workspace = true
iota-framework.workspace = true
iota-genesis-builder.workspace = true
iota-json-rpc-types.workspace = true
iota-macros.workspace = true
iota-metrics.workspace = true
iota-move-build.workspace = true
iota-network.workspace = true
iota-network-stack.workspace = true
iota-protocol-config.workspace = true
iota-simulator.workspace = true
iota-storage.workspace = true
iota-swarm-config.workspace = true
iota-transaction-checks.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
shared-crypto.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true
typed-store-derive.workspace = true

[dev-dependencies]
# external dependencies
clap.workspace = true
criterion.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
more-asserts.workspace = true
num-bigint.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
serde-reflection.workspace = true
serde_yaml.workspace = true
tower.workspace = true

# internal dependencies
iota-move.workspace = true
iota-test-transaction-builder.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
# external dependencies
pprof = { version = "0.14", features = ["cpp", "frame-pointer"] }
test-fuzz.workspace = true

# internal dependencies
iota-macros.workspace = true
iota-protocol-config.workspace = true

# moka uses `quanta` by default for timing, which is not compatible with the simulator
[target.'cfg(msim)'.dependencies]
moka = { version = "0.12", default-features = false, features = ["sync", "atomic64"] }

[target.'cfg(msim)'.dev-dependencies]
test-cluster.workspace = true

[target.'cfg(not(msim))'.dependencies]
moka = { version = "0.12", features = ["sync"] }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

[[bench]]
name = "verified_cert_cache_bench"
harness = false

[[bench]]
name = "batch_verification_bench"
harness = false
required-features = ["test-utils"]

[features]
test-utils = []

[package.metadata.cargo-udeps.ignore]
development = ["pprof", "test-fuzz"]
