[package]
name = "iota-data-ingestion-core"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
bcs.workspace = true
byteorder.workspace = true
bytes.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
futures.workspace = true
notify.workspace = true
object_store.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

# internal dependencies
iota-config.workspace = true
iota-metrics.workspace = true
iota-protocol-config.workspace = true
iota-rest-api.workspace = true
iota-storage.workspace = true
iota-types.workspace = true

[dev-dependencies]
rand.workspace = true
