[package]
name = "iota-data-ingestion"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
aws-config = "1.5.6"
aws-sdk-dynamodb = "1.42"
aws-sdk-s3 = "1.50"
backoff.workspace = true
base64-url.workspace = true
bcs.workspace = true
byteorder.workspace = true
bytes.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
futures.workspace = true
notify.workspace = true
object_store.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

# internal dependencies
iota-archival.workspace = true
iota-config.workspace = true
iota-data-ingestion-core.workspace = true
iota-metrics.workspace = true
iota-rest-api.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
