[package]
name = "iota-faucet"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
eyre.workspace = true
futures.workspace = true
http.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rocksdb.workspace = true
scopeguard.workspace = true
serde.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
ttl_cache = "0.5.1"
uuid.workspace = true

# internal dependencies
bin-version.workspace = true
iota-config.workspace = true
iota-json-rpc-types.workspace = true
iota-keys.workspace = true
iota-metrics.workspace = true
iota-network-stack.workspace = true
iota-sdk.workspace = true
iota-types.workspace = true
shared-crypto.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

[dev-dependencies]
test-cluster.workspace = true

[[bin]]
name = "iota-faucet"
path = "src/main.rs"
