[package]
name = "iota-framework-tests"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Runs Move tests for iota-framework"

[lints]
workspace = true

[[test]]
name = "move_tests"
harness = false

[dev-dependencies]
# external dependencies
datatest-stable.workspace = true
prometheus.workspace = true

# internal dependencies
iota-adapter = { path = "../../iota-execution/latest/iota-adapter", package = "iota-adapter-latest" }
iota-config.workspace = true
iota-framework.workspace = true
iota-move.workspace = true
iota-move-build.workspace = true
iota-protocol-config.workspace = true
iota-types.workspace = true
iota-verifier = { path = "../../iota-execution/latest/iota-verifier", package = "iota-verifier-latest" }
move-bytecode-verifier = { path = "../../external-crates/move/crates/move-bytecode-verifier" }
move-bytecode-verifier-meter.workspace = true
move-cli.workspace = true
move-package.workspace = true
move-unit-test.workspace = true

[dependencies]
