[package]
name = "iota-json-rpc-types"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
bcs.workspace = true
colored.workspace = true
enum_dispatch.workspace = true
fastcrypto.workspace = true
itertools.workspace = true
json_to_table.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
tabled.workspace = true
tracing.workspace = true

# internal dependencies
iota-enum-compat-util.workspace = true
iota-json.workspace = true
iota-macros.workspace = true
iota-metrics.workspace = true
iota-package-resolver.workspace = true
iota-protocol-config.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
