[package]
name = "iota-metrics"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anemo.workspace = true
anemo-tower.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
dashmap.workspace = true
futures.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
scopeguard.workspace = true
simple-server-timing-header = "0.1.1"
sysinfo.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# internal dependencies
prometheus-closure-metric.workspace = true
