[package]
name = "iota-network-stack"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "IOTA's network tooling"

[dependencies]
anemo.workspace = true
bcs.workspace = true
bytes.workspace = true
eyre.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
multiaddr = "0.17.0"
pin-project-lite = "0.2.13"
serde.workspace = true
snap.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-stream.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
