[package]
name = "iota-source-validation-service"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "iota-source-validation-service"

[dependencies]
# external dependencies
anyhow = { version = "1.0.64", features = ["backtrace"] }
axum.workspace = true
clap.workspace = true
const-str.workspace = true
git-version.workspace = true
hyper.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
serde = { version = "1.0.144", features = ["derive"] }
tempfile = "3.3.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { version = "0.7.4", features = ["preserve_order"] }
tower.workspace = true
tower-http.workspace = true
tracing = "0.1.36"
url = "2.3.1"

# internal dependencies
bin-version.workspace = true
iota-metrics.workspace = true
iota-move.workspace = true
iota-move-build.workspace = true
iota-sdk.workspace = true
iota-source-validation.workspace = true
move-compiler.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
# external dependencies
expect-test = "1.4.0"
fs_extra = "1.3.0"
reqwest.workspace = true

# internal dependencies
iota.workspace = true
iota-json-rpc-types.workspace = true
iota-move.workspace = true
test-cluster.workspace = true
