[package]
name = "iota-tls"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "tools for rustls-based certificate generation and verification"

[dependencies]
anyhow.workspace = true
arc-swap = "1.7.1"
# Axum support
axum.workspace = true
axum-server.workspace = true
ed25519 = { version = "2.2", features = ["pkcs8", "alloc", "zeroize"] }
fastcrypto.workspace = true
pkcs8 = { version = "0.10", features = ["std"] }
rcgen = "0.13"
# reqwest support
reqwest.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tower-layer = "0.3.2"
webpki = { version = "0.103", package = "rustls-webpki", features = ["alloc", "ring", "std"] }
x509-parser = "0.17.0"

[dev-dependencies]
rand.workspace = true
