[package]
name = "iota-tool"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anemo.workspace = true
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "c4e7e4cb4b624d7738c2016d7b7885c6774ff9c2" }
anyhow.workspace = true
bcs.workspace = true
clap.workspace = true
colored.workspace = true
comfy-table.workspace = true
eyre.workspace = true
fastcrypto.workspace = true
futures.workspace = true
hex.workspace = true
indicatif.workspace = true
itertools.workspace = true
num_cpus.workspace = true
object_store.workspace = true
prometheus.workspace = true
ron = "0.8.0"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

# internal dependencies
bin-version.workspace = true
iota-archival.workspace = true
iota-config.workspace = true
iota-core.workspace = true
iota-network.workspace = true
iota-package-dump.workspace = true
iota-protocol-config.workspace = true
iota-replay.workspace = true
iota-sdk.workspace = true
iota-snapshot.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
move-core-types.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true
